--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,13 @@
+FROM node:14
 
+WORKDIR /app
+
+EXPOSE 3001
+
+COPY . .
+
+ADD ./node_modules.tar.gz /app
+
+ENTRYPOINT [ "npm" ]
+
+CMD [ "start" ]
