--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,11 @@
+FROM mjgargani/puppeteer:trybe1.0
 
+WORKDIR /app
+
+COPY . .
+
+ADD ./node_modules.tar.gz .
+
+ENTRYPOINT [ "npm" ]
+
+CMD [ "test" ]
